# airctl

./: README.md  __main__.py  main.py  pyproject.toml  setup.cfg
src/: __main__.py
src/actions/: swipe_work_space.py
src/capture/: camera.py  main.py
src/tracker/: hand_tracker.py  main.py  model_manager.py  paths.py
