[project]
name = "airctl"
version = "0.1.0"
description = "`airctl` is a gesture-driven “system control” tool (think `systemctl`, but for air/hand gestures)."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jeepney>=0.9.0",
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "typer>=0.24.1",
]

[project.scripts]
airctl = "__main__:app"

[tool.uv]
package = true
