[metadata]
name = airctl
version = 0.1.0

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg-info,
    build,
    dist,
    docs
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
strict_optional = True

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --strict-markers
    --tb=short
markers =
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = src
branch = True
omit =
    */tests/*
    */test_*.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
precision = 2
show_missing = True
